fix overflow

--- a/pages/sections/_id/style.scss
+++ b/pages/sections/_id/style.scss
@@ -6,7 +6,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   .wrapPage {
     overflow: auto;
     height: 100%;
